@@ -56,6 +56,8 @@ rps = float(default=0.62)
 bsd = float(default=10e6)
 # -------- INITIAL PARAMETERS
 
+# Maximum epicentral distance (km) to process a trace
+max_epi_dist = float(default=None)
 
 # S/N PARAMETERS --------
 # Minimum rms (in trace units before instrument corrections)
