@@ -19,6 +19,7 @@ v0.9 - 2016-05-XX
 	- Traces are always plotted, even if no inversion is performed
 	- Use by default a global model for theoretical travel time calculation
 	- New options for P and S arrival time tolerance
+	- New option for maximum epicentral distance for trace processing
 	- Use json format for traceid correction file
 	- Save config file to output dir (only for source_spec)
 	- Code cleaning and optimization:
